--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -79,6 +79,7 @@ markdown_extensions:
 nav:
   - Home: index.md
   - Quick Start: quick-start.md
+  - Command Line Interface: cli.md
   - API Reference:
       - Client: api-reference/client.md
       - Models: api-reference/models.md
