--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,13 @@ dependencies = [
     "stringenum>=0.6.0 ; python_full_version < '3.11'",
 ]
 
+[project.optional-dependencies]
+cli = ["cyclopts>=3.9.3", "rich>=13.9.4"]
+
+[project.scripts]
+privatebin = "privatebin.__main__:app"
+pbin = "privatebin.__main__:app"
+
 [dependency-groups]
 docs = [
     "mkdocs-autorefs>=1.4.1",
@@ -94,7 +101,7 @@ addopts = [
     "--disable-socket",
 ]
 filterwarnings = ["error"]
-log_cli_level = "info"
+log_cli_level = "INFO"
 testpaths = ["tests"]
 
 [tool.coverage.report]
