--- a/.github/workflows/lint-and-type-check.yml
+++ b/.github/workflows/lint-and-type-check.yml
@@ -39,7 +39,7 @@ jobs:
           python-version: "3.13"
 
       - name: Install the project
-        run: uv sync
+        run: uv sync --all-extras
 
       - name: Run mypy
         run: uv run mypy .
