--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,9 @@ dependencies = [
     "stringenum>=0.6.0 ; python_full_version < '3.11'",
 ]
 
+[project.urls]
+Repository = "https://github.com/Ravencentric/privatebin"
+
 [project.optional-dependencies]
 cli = ["cyclopts>=3.9.3", "rich>=13.9.4"]
 
