--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,12 +28,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           fetch-depth: 0 # Important for changelog
 
       - name: Install uv
-        uses: astral-sh/setup-uv@v5
+        uses: astral-sh/setup-uv@f94ec6bedd8674c4426838e6b50417d36b6ab231 # v5.3.1
         with:
           python-version: "3.13"
 
@@ -41,19 +41,12 @@ jobs:
         run: uv build
 
       - name: Publish package distributions to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
+        uses: pypa/gh-action-pypi-publish@76f52bc884231f62b9a034ebfe128415bbaabdfc # v1.12.4
 
-      - name: Generate changelog with git-cliff
-        uses: tj-actions/git-cliff@v1
-        with:
-          args: --latest --strip all
-          template-config: .github/cliff-template.toml
-          output: "CHANGELOG.md"
+      - name: Generate a changelog
+        run: uvx git-cliff --latest --strip all --output "CHANGELOG.md"
 
       - name: Create Release
-        uses: ncipollo/release-action@v1
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          bodyFile: "CHANGELOG.md"
-          draft: false
-          prerelease: false
+        run: gh release create ${{ github.ref_name }} -F "CHANGELOG.md" --fail-on-no-commits
+        env:
+          GH_TOKEN: ${{ github.token }}
