--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,8 +21,7 @@ dependencies = [
     "base58>=2.1.1",
     "cryptography>=44.0.2",
     "httpx>=0.28.1",
-    "pydantic>=2.10.6",
-    "stringenum>=0.6.0 ; python_full_version < '3.11'",
+    "msgspec>=0.19.0",
 ]
 
 [project.urls]
@@ -81,7 +80,7 @@ extend-select = [
 fixable = ["ALL"]
 
 [tool.ruff.lint.flake8-type-checking]
-runtime-evaluated-base-classes = ["pydantic.BaseModel"]
+runtime-evaluated-base-classes = ["msgspec.Struct"]
 
 [tool.ruff.lint.extend-per-file-ignores]
 "tests/*" = ["D", "FBT", "PL"]
