ci: don't run tests twice for a release

--- a/.github/workflows/lint-and-type-check.yml
+++ b/.github/workflows/lint-and-type-check.yml
@@ -8,6 +8,8 @@ on:
       - 'src/**'
       - 'tests/**'
       - '.github/workflows/lint-and-type-check.yml'
+    tags-ignore:
+      - 'v*.*.*'
   pull_request:
     branches:
       - main
